# telmus

./: .coverage  .gitignore  404.html  BUILD_SUMMARY.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  audit.py  bump_12.py  bump_version.py  capture.py  check_vars.py  deploy_fix.py  fix_all.py  fix_future.py  fix_security.py  fix_typing.py  fix_valuation.py  index.html  mkdocs.yml  patch_css.py  portfolio.csv  portfolio_report.html  pyproject.toml  report.xlsx  scan_output.txt  scratch_signals.py  show_raw_response.py  sitemap.xml  test_combo.xlsx  test_cross_sheet.xlsx  test_mcp_server.py
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
cli/: index.html
dashboard/: app.py
docs/: changelog.md  cli.md  index.md  mcp.md  powerbi.md  quickstart.md  sdk.md
docs/engines/: health.md
engines/health/: index.html
mcp/: index.html
overrides/: home.html
powerbi/: index.html
quickstart/: index.html
scripts/: README.md  harden_dashboard.py  patch_ui.py  patch_version.py  show_raw_response.py  update_html.py
scripts/fixes/: fix_excel.py  fix_flags.py  fix_fstrings.py  fix_mypy.py  fix_quotes.py  fix_tests.py
scripts/version_bumps/: bump_11.py  bump_13.py
sdk/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/changelog/: index.html
site/cli/: index.html
site/engines/health/: index.html
site/mcp/: index.html
site/overrides/: home.html
site/quickstart/: index.html
site/sdk/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
stylesheets/: extra.css
tellus/: __init__.py
tellus/cli/: app.py
tellus/core/: brief.py  scanner.py
tellus/core/engines/: flags.py  growth.py  health.py  valuation.py
tellus/mcp/: server.py
tellus/sdk/: __init__.py  reconciler.py
telmus/: __init__.py
telmus/cli/: app.py
telmus/core/: brief.py  loaders.py  result.py  scanner.py
telmus/core/engines/: flags.py  growth.py  health.py  valuation.py
telmus/exporters/: excel.py  html_dashboard.py  powerbi.py
telmus/mcp/: server.py
telmus/sdk/: __init__.py  reconciler.py
tests/: test_cli.py  test_excel.py  test_flags.py  test_growth.py  test_health.py  test_powerbi.py  test_valuation.py  test_yf.py
tests/fixtures/: create_fixtures.py  infy_mock.py
valkit/: __init__.py
valkit/cli/: app.py
valkit/core/: brief.py  loaders.py  scanner.py
valkit/core/engines/: flags.py  growth.py  health.py  valuation.py
valkit/mcp/: server.py
valkit/sdk/: __init__.py  reconciler.py
website/: index.html
